--- a/ansible_collections/validators/roles/chain_celestia/handlers/main.yml
+++ b/ansible_collections/validators/roles/chain_celestia/handlers/main.yml
@@ -1,27 +1,27 @@
 ---
-- name: Restart bridge-celestia-app-{{ chain_celestia_network }}
+- name: Restart bridge-celestia-app-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
-    name: bridge-celestia-app-{{ chain_celestia_network }}
+    name: bridge-celestia-app-{{ chain_celestia_chain_id }}
     state: restarted
 
-- name: Restart bridge-celestia-node-{{ chain_celestia_network }}
+- name: Restart bridge-celestia-node-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
-    name: bridge-celestia-node-{{ chain_celestia_network }}
+    name: bridge-celestia-node-{{ chain_celestia_chain_id }}
     state: restarted
 
-- name: Restart validator-celestia-app-{{ chain_celestia_network }}
+- name: Restart appd-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
-    name: validator-celestia-app-{{ chain_celestia_network }}
+    name: appd-{{ chain_celestia_chain_id }}
     state: restarted
 
-- name: Restart celestia-da-otel-collector-{{ chain_celestia_network }}
+- name: Restart celestia-da-otel-collector-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
-    name: celestia-da-otel-collector-{{ chain_celestia_network }}
+    name: celestia-da-otel-collector-{{ chain_celestia_chain_id }}
     state: restarted
 
-- name: Restart cosmos-validator-watcher-{{ chain_celestia_network }}
+- name: Restart cosmos-validator-watcher-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
-    name: cosmos-validator-watcher-{{ chain_celestia_network }}
+    name: cosmos-validator-watcher-{{ chain_celestia_chain_id }}
     state: restarted
 
 - name: Restart alloy
