--- a/ansible_collections/validators/roles/chain_celestia/tasks/celestia-app.yml
+++ b/ansible_collections/validators/roles/chain_celestia/tasks/celestia-app.yml
@@ -6,18 +6,17 @@
 - name: Celestia-app | Set vars (bridge)
   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
   ansible.builtin.set_fact:
-    service_bridge: Restart bridge-celestia-app-{{ chain_celestia_network }}
+    service_bridge: Restart bridge-celestia-app-{{ chain_celestia_chain_id }}
 
 - name: Celestia-app | Append bridge to notify list
   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
   ansible.builtin.set_fact:
     service_list: "{{ service_list + [service_bridge] }}"
 
-
 - name: Celestia-app | Set vars (validator)
   when: chain_celestia_validator is defined and chain_celestia_validator | bool
   ansible.builtin.set_fact:
-    service_validator: Restart validator-celestia-app-{{ chain_celestia_network }}
+    service_validator: Restart appd-{{ chain_celestia_chain_id }}
 
 - name: Celestia-app | Append validator to notify list
   when: chain_celestia_validator is defined and chain_celestia_validator | bool
