--- a/ansible_collections/validators/roles/chain_celestia/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_celestia/tasks/main.yml
@@ -35,6 +35,13 @@
   loop:
     - "/home/{{ chain_celestia_user }}/go/bin"
 
+- name: Configure celestia shell
+  ansible.builtin.include_role:
+    name: binarybuilders.servers.configure_hosts
+    tasks_from: shell.yml
+  vars:
+    configure_hosts_users_username: "{{ chain_celestia_user }}"
+
 - name: Install Go
   ansible.builtin.include_role:
     name: install_go
@@ -59,6 +66,7 @@
   ansible.builtin.include_role:
     name: binarybuilders.validators.observability
   vars:
+    observability_unique_id: bridge
     observability_alerts: "{{ chain_celestia_alerts }}"
     observability_chain_id: "{{ chain_celestia_chain_id }}"
     observability_prometheus_sdk_prometheus_port: "{{ chain_celestia_bridge_app_prometheus_port }}"
@@ -76,6 +84,7 @@
   ansible.builtin.include_role:
     name: binarybuilders.validators.observability
   vars:
+    observability_unique_id: validator
     observability_alerts: "{{ chain_celestia_alerts }}"
     observability_chain_id: "{{ chain_celestia_chain_id }}"
     observability_prometheus_sdk_prometheus_port: "{{ chain_celestia_validator_app_prometheus_port }}"
