--- a/ansible_collections/validators/roles/chain_osmosis/handlers/main.yml
+++ b/ansible_collections/validators/roles/chain_osmosis/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: Restart osmosisd-{{ chain_osmosis_network }}
+- name: Restart appd-{{ chain_osmosis_chain_id }}
   ansible.builtin.systemd_service:
-    name: osmosisd-{{ chain_osmosis_network }}
+    name: appd-{{ chain_osmosis_chain_id }}
     state: restarted
 
 - name: Restart cosmos-validator-watcher-{{ chain_osmosis_chain_id }}
