--- a/ansible_collections/validators/roles/chain_osmosis/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_osmosis/tasks/main.yml
@@ -70,3 +70,10 @@
     owner: "{{ chain_osmosis_user }}"
     group: users
     mode: "0644"
+
+- name: Configure osmosis shell
+  ansible.builtin.include_role:
+    name: binarybuilders.servers.configure_hosts
+    tasks_from: shell.yml
+  vars:
+    configure_hosts_users_username: "{{ chain_osmosis_user }}"
