--- a/ansible_collections/validators/roles/chain_osmosis/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_osmosis/tasks/main.yml
@@ -1,4 +1,29 @@
 ---
+- name: Set facts
+  ansible.builtin.set_fact:
+    global_chain_id: "{{ chain_osmosis_chain_id }}"
+    global_cosmos_validator_watcher_image: "{{ chain_osmosis_cosmos_validator_watcher_image }}"
+    global_user: "{{ chain_osmosis_user }}"
+    global_alerts: "{{ chain_osmosis_alerts }}"
+    global_network: "{{ chain_osmosis_network }}"
+    global_cosmovisor_upgrade_name: "{{ chain_osmosis_cosmovisor_upgrade_name }}"
+    global_cosmovisor_version: "{{ chain_osmosis_cosmovisor_version }}"
+    global_appd_name: "{{ chain_osmosis_appd_name }}"
+    global_appd_version: "{{ chain_osmosis_appd_version }}"
+    global_appd_repo_url: "{{ chain_osmosis_appd_repo_url }}"
+    global_appd_p2p_port: "{{ chain_osmosis_appd_p2p_port }}"
+    global_appd_rpc_port: "{{ chain_osmosis_appd_rpc_port }}"
+    global_appd_prometheus_port: "{{ chain_osmosis_appd_prometheus_port }}"
+    global_home_dir: /home/{{ chain_osmosis_user }}/.osmosisd
+    global_watcher_prometheus_port: "{{ chain_osmosis_watcher_prometheus_port }}"
+    global_watcher_quadlet_command:
+      - --http-addr :{{ chain_osmosis_watcher_prometheus_port }}
+      - --node http://localhost:{{ chain_osmosis_appd_rpc_port }}
+      - --validator {{ chain_osmosis_validator_pubkey }}:{{ chain_osmosis_chain_id }}
+    global_configuration_app_lines: "{{ chain_osmosis_configuration_app_lines }}"
+    global_configuration_client_lines: "{{ chain_osmosis_configuration_client_lines }}"
+    global_configuration_config_lines: "{{ chain_osmosis_configuration_config_lines }}"
+
 - name: Install required packages
   ansible.builtin.apt:
     name:
@@ -38,30 +63,29 @@
   ansible.builtin.include_role:
     name: install_go
 
-- name: Osmosisd | Set facts
-  ansible.builtin.set_fact:
-    chain_osmosis_binary_name: osmosisd
-    chain_osmosis_home_dir: /home/{{ chain_osmosis_user }}/.osmosisd
+- name: Osmosisd + Cosmovisor
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: appd-binary-cosmovisor.yml
 
-- name: Osmosisd | Binary
-  ansible.builtin.include_tasks: osmosisd-binary.yml
-
-- name: Osmosisd | configuration
-  ansible.builtin.include_tasks: osmosisd-configuration.yml
+- name: Osmosisd configuration
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: appd-configuration.yml
 
 - name: Cosmos-validator-watcher
-  ansible.builtin.include_tasks: cosmos-validator-watcher.yml
-  tags:
-    - cosmos-validator-watcher
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: cosmos-validator-watcher.yml
 
 - name: Validator-observability
   ansible.builtin.include_role:
     name: binarybuilders.validators.observability
   vars:
-    observability_alerts: "{{ chain_osmosis_alerts }}"
-    observability_chain_id: "{{ chain_osmosis_chain_id }}"
-    observability_prometheus_sdk_prometheus_port: "{{ chain_osmosis_osmosisd_prometheus_port }}"
-    observability_prometheus_watcher_prometheus_port: "{{ chain_osmosis_watcher_prometheus_port }}"
+    observability_alerts: "{{ global_alerts }}"
+    observability_chain_id: "{{ global_chain_id }}"
+    observability_prometheus_sdk_prometheus_port: "{{ global_appd_prometheus_port }}"
+    observability_prometheus_watcher_prometheus_port: "{{ global_watcher_prometheus_port }}"
 
 - name: Deploy justfile
   ansible.builtin.template:
@@ -70,10 +94,3 @@
     owner: "{{ chain_osmosis_user }}"
     group: users
     mode: "0644"
-
-- name: Configure osmosis shell
-  ansible.builtin.include_role:
-    name: binarybuilders.servers.configure_hosts
-    tasks_from: shell.yml
-  vars:
-    configure_hosts_users_username: "{{ chain_osmosis_user }}"
