feat(servers): uptime-kuma tailscaled dependency

--- a/ansible_collections/servers/roles/uptime_kuma/tasks/main.yml
+++ b/ansible_collections/servers/roles/uptime_kuma/tasks/main.yml
@@ -33,8 +33,8 @@
 
         [Unit]
         Description=uptime-kuma
-        After=network-online.target
-        Wants=network-online.target
+        After=network-online.target tailscaled.service
+        Wants=network-online.target tailscaled.service
 
         [Service]
         Restart=always
