--- a/ansible_collections/validators/roles/chain_celestia/handlers/main.yml
+++ b/ansible_collections/validators/roles/chain_celestia/handlers/main.yml
@@ -1,12 +1,7 @@
 ---
-- name: Restart bridge-celestia-app-{{ chain_celestia_chain_id }}
+- name: Restart celestia-bridge-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
-    name: bridge-celestia-app-{{ chain_celestia_chain_id }}
-    state: restarted
-
-- name: Restart bridge-celestia-node-{{ chain_celestia_chain_id }}
-  ansible.builtin.systemd_service:
-    name: bridge-celestia-node-{{ chain_celestia_chain_id }}
+    name: celestia-bridge-{{ chain_celestia_chain_id }}
     state: restarted
 
 - name: Restart appd-{{ chain_celestia_chain_id }}
@@ -17,6 +12,11 @@
 - name: Restart celestia-da-otel-collector-{{ chain_celestia_chain_id }}
   ansible.builtin.systemd_service:
     name: celestia-da-otel-collector-{{ chain_celestia_chain_id }}
+    state: restarted
+
+- name: Restart tmkms-{{ chain_celestia_chain_id }}
+  ansible.builtin.systemd_service:
+    name: tmkms-{{ chain_celestia_chain_id }}
     state: restarted
 
 - name: Restart cosmos-validator-watcher-{{ chain_celestia_chain_id }}
