--- a/ansible_collections/validators/roles/chain_nillion/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_nillion/tasks/main.yml
@@ -1,4 +1,29 @@
 ---
+- name: Set facts
+  ansible.builtin.set_fact:
+    global_chain_id: "{{ chain_nillion_chain_id }}"
+    global_cosmos_validator_watcher_image: "{{ chain_nillion_cosmos_validator_watcher_image }}"
+    global_user: "{{ chain_nillion_user }}"
+    global_alerts: "{{ chain_nillion_alerts }}"
+    global_network: "{{ chain_nillion_network }}"
+    global_cosmovisor_upgrade_name: "{{ chain_nillion_cosmovisor_upgrade_name }}"
+    global_cosmovisor_version: "{{ chain_nillion_cosmovisor_version }}"
+    global_appd_name: "{{ chain_nillion_appd_name }}"
+    global_appd_version: "{{ chain_nillion_appd_version }}"
+    global_appd_repo_url: "{{ chain_nillion_appd_repo_url }}"
+    global_appd_p2p_port: "{{ chain_nillion_appd_p2p_port }}"
+    global_appd_rpc_port: "{{ chain_nillion_appd_rpc_port }}"
+    global_appd_prometheus_port: "{{ chain_nillion_appd_prometheus_port }}"
+    global_home_dir: /home/{{ chain_nillion_user }}/.nillionapp
+    global_watcher_prometheus_port: "{{ chain_nillion_watcher_prometheus_port }}"
+    global_watcher_quadlet_command:
+      - --http-addr :{{ chain_nillion_watcher_prometheus_port }}
+      - --node http://localhost:{{ chain_nillion_appd_rpc_port }}
+      - --validator {{ chain_nillion_validator_pubkey }}:{{ chain_nillion_chain_id }}
+    global_configuration_app_lines: "{{ chain_nillion_configuration_app_lines }}"
+    global_configuration_client_lines: "{{ chain_nillion_configuration_client_lines }}"
+    global_configuration_config_lines: "{{ chain_nillion_configuration_config_lines }}"
+
 - name: Install required packages
   ansible.builtin.apt:
     name:
@@ -38,30 +63,29 @@
   ansible.builtin.include_role:
     name: install_go
 
-- name: Nilchaind | Set facts
-  ansible.builtin.set_fact:
-    chain_nillion_binary_name: nilchaind
-    chain_nillion_home_dir: /home/{{ chain_nillion_user }}/.nillionapp
+- name: Cosmoshubd + Cosmovisor
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: appd-binary-cosmovisor.yml
 
-- name: Nilchaind | Binary
-  ansible.builtin.include_tasks: nilchaind-binary.yml
-
-- name: Nilchaind | configuration
-  ansible.builtin.include_tasks: nilchaind-configuration.yml
+- name: Cosmoshubd configuration
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: appd-configuration.yml
 
 - name: Cosmos-validator-watcher
-  ansible.builtin.include_tasks: cosmos-validator-watcher.yml
-  tags:
-    - cosmos-validator-watcher
+  ansible.builtin.include_role:
+    name: binarybuilders.validators.global
+    tasks_from: cosmos-validator-watcher.yml
 
 - name: Validator-observability
   ansible.builtin.include_role:
     name: binarybuilders.validators.observability
   vars:
-    observability_alerts: "{{ chain_nillion_alerts }}"
-    observability_chain_id: "{{ chain_nillion_chain_id }}"
-    observability_prometheus_sdk_prometheus_port: "{{ chain_nillion_nilchaind_prometheus_port }}"
-    observability_prometheus_watcher_prometheus_port: "{{ chain_nillion_watcher_prometheus_port }}"
+    observability_alerts: "{{ global_alerts }}"
+    observability_chain_id: "{{ global_chain_id }}"
+    observability_prometheus_sdk_prometheus_port: "{{ global_appd_prometheus_port }}"
+    observability_prometheus_watcher_prometheus_port: "{{ global_watcher_prometheus_port }}"
 
 - name: Deploy justfile
   ansible.builtin.template:
