--- a/ansible_collections/validators/roles/chain_celestia/tasks/main.yml
+++ b/ansible_collections/validators/roles/chain_celestia/tasks/main.yml
@@ -1,102 +1,121 @@
 ---
-- name: Install required packages
-  ansible.builtin.apt:
-    name:
-      - aria2
-      - build-essential
-      - git
-      - make
-      - lz4
-      - gcc
-    state: present
+# - name: Install required packages
+#   ansible.builtin.apt:
+#     name:
+#       - aria2
+#       - build-essential
+#       - git
+#       - make
+#       - lz4
+#       - gcc
+#     state: present
 
-- name: Create user
-  ansible.builtin.user:
-    name: "{{ chain_celestia_user }}"
-    group: users
-    system: true
-    create_home: true
-    state: present
+# - name: Create user
+#   ansible.builtin.user:
+#     name: "{{ chain_celestia_user }}"
+#     group: users
+#     system: true
+#     create_home: true
+#     state: present
 
-- name: Add user to systemd-journal group
-  ansible.builtin.user:
-    name: "{{ chain_celestia_user }}"
-    groups: systemd-journal
-    append: true
+# - name: Add user to systemd-journal group
+#   ansible.builtin.user:
+#     name: "{{ chain_celestia_user }}"
+#     groups: systemd-journal
+#     append: true
 
-- name: Create directories
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    recurse: true
-    mode: "0700"
-    owner: "{{ chain_celestia_user }}"
-    group: users
-  loop:
-    - "/home/{{ chain_celestia_user }}/go/bin"
+# - name: Create directories
+#   ansible.builtin.file:
+#     path: "{{ item }}"
+#     state: directory
+#     recurse: true
+#     mode: "0700"
+#     owner: "{{ chain_celestia_user }}"
+#     group: users
+#   loop:
+#     - "/home/{{ chain_celestia_user }}/go/bin"
 
-- name: Configure celestia shell
+# - name: Configure celestia shell
+#   ansible.builtin.include_role:
+#     name: binarybuilders.servers.configure_hosts
+#     tasks_from: shell.yml
+#   vars:
+#     configure_hosts_users_username: "{{ chain_celestia_user }}"
+
+# - name: Install Go
+#   when: (chain_celestia_bridge is defined and chain_celestia_bridge | bool) or (chain_celestia_appd is defined and chain_celestia_appd | bool)
+#   ansible.builtin.include_role:
+#     name: install_go
+
+# - name: Celestia-appd
+#   when: chain_celestia_appd is defined and chain_celestia_appd | bool
+#   ansible.builtin.include_tasks: celestia-appd.yml
+
+# - name: Celestia-node
+#   ansible.builtin.include_tasks: celestia-node.yml
+#   when: (chain_celestia_bridge is defined and chain_celestia_bridge | bool) or (chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool)
+
+# - name: Celestia-bridge
+#   ansible.builtin.include_tasks: celestia-node-bridge.yml
+#   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
+
+# - name: Celestia-da-otel-collector - bridge
+#   ansible.builtin.include_tasks: celestia-node-bridge-da-otel-collector.yml
+#   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
+
+# - name: Celestia-bootstrapper
+#   ansible.builtin.include_tasks: celestia-node-bootstrapper.yml
+#   when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
+
+# - name: Celestia-bootstrapper-certbot
+#   ansible.builtin.include_tasks: celestia-node-bootstrapper-certbot.yml
+#   when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
+
+# - name: Celestia-da-otel-collector - bootstrapper
+#   ansible.builtin.include_tasks: celestia-node-bootstrapper-otel-collector.yml
+#   when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
+
+# - name: Validator-observability
+#   when: chain_celestia_appd is defined and chain_celestia_appd | bool
+#   ansible.builtin.include_role:
+#     name: binarybuilders.validators.observability
+#   vars:
+#     observability_alerts: "{{ chain_celestia_alerts }}"
+#     observability_chain_id: "{{ chain_celestia_chain_id }}"
+#     observability_prometheus_sdk_prometheus_port: "{{ chain_celestia_appd_prometheus_port }}"
+#     observability_prometheus_watcher_prometheus_port: "{{ chain_celestia_validator_watcher_prometheus_port }}"
+
+# - name: Cosmos-validator-watcher
+#   when: chain_celestia_appd is defined and chain_celestia_appd | bool
+#   ansible.builtin.include_tasks: cosmos-validator-watcher.yml
+
+# - name: TMKMS
+#   ansible.builtin.include_tasks: tmkms.yml
+#   when: chain_celestia_tmkms is defined and chain_celestia_tmkms | bool
+
+# - name: Deploy justfile
+#   ansible.builtin.template:
+#     src: justfile.j2
+#     dest: /home/{{ chain_celestia_user }}/justfile
+#     owner: "{{ chain_celestia_user }}"
+#     group: users
+#     mode: "0644"
+
+- name: Backup
   ansible.builtin.include_role:
-    name: binarybuilders.servers.configure_hosts
-    tasks_from: shell.yml
+    name: binarybuilders.validators.global
+    tasks_from: backup.yml
   vars:
-    configure_hosts_users_username: "{{ chain_celestia_user }}"
+    global_user: "{{ chain_celestia_user }}"
+    global_home_dir: "/home/{{ chain_celestia_user }}"
 
-- name: Install Go
-  when: (chain_celestia_bridge is defined and chain_celestia_bridge | bool) or (chain_celestia_appd is defined and chain_celestia_appd | bool)
-  ansible.builtin.include_role:
-    name: install_go
-
-- name: Celestia-appd
-  when: chain_celestia_appd is defined and chain_celestia_appd | bool
-  ansible.builtin.include_tasks: celestia-appd.yml
-
-- name: Celestia-node
-  ansible.builtin.include_tasks: celestia-node.yml
-  when: (chain_celestia_bridge is defined and chain_celestia_bridge | bool) or (chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool)
-
-- name: Celestia-bridge
-  ansible.builtin.include_tasks: celestia-node-bridge.yml
-  when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
-
-- name: Celestia-da-otel-collector - bridge
-  ansible.builtin.include_tasks: celestia-node-bridge-da-otel-collector.yml
-  when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
-
-- name: Celestia-bootstrapper
-  ansible.builtin.include_tasks: celestia-node-bootstrapper.yml
-  when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
-
-- name: Celestia-bootstrapper-certbot
-  ansible.builtin.include_tasks: celestia-node-bootstrapper-certbot.yml
-  when: chain_celestia_bootstrapper is defined and chain_celestia_bootstrapper | bool
-
-- name: Celestia-da-otel-collector - bootstrapper
-  ansible.builtin.include_tasks: celestia-node-bootstrapper-otel-collector.yml
-  when: chain_celestia_bridge is defined and chain_celestia_bridge | bool
-
-- name: Validator-observability
-  when: chain_celestia_appd is defined and chain_celestia_appd | bool
-  ansible.builtin.include_role:
-    name: binarybuilders.validators.observability
-  vars:
-    observability_alerts: "{{ chain_celestia_alerts }}"
-    observability_chain_id: "{{ chain_celestia_chain_id }}"
-    observability_prometheus_sdk_prometheus_port: "{{ chain_celestia_appd_prometheus_port }}"
-    observability_prometheus_watcher_prometheus_port: "{{ chain_celestia_validator_watcher_prometheus_port }}"
-
-- name: Cosmos-validator-watcher
-  when: chain_celestia_appd is defined and chain_celestia_appd | bool
-  ansible.builtin.include_tasks: cosmos-validator-watcher.yml
-
-- name: TMKMS
-  ansible.builtin.include_tasks: tmkms.yml
-  when: chain_celestia_tmkms is defined and chain_celestia_tmkms | bool
-
-- name: Deploy justfile
-  ansible.builtin.template:
-    src: justfile.j2
-    dest: /home/{{ chain_celestia_user }}/justfile
-    owner: "{{ chain_celestia_user }}"
-    group: users
+- name: Backup directories
+  ansible.builtin.copy:
+    dest: /home/{{ chain_celestia_user }}/scripts/backup_directories.conf
+    content: |
+      bootstrapper:/home/celestia/.celestia-full-mocha-4/keys:/home/celestia/backups
+      bridge:/home/celestia/.celestia-bridge-mocha-4/keys:/home/celestia/backups
+      validator:/home/celestia/.celestia-app/config:/home/celestia/backups
     mode: "0644"
+  become: true
+  become_user: "{{ chain_celestia_user }}"
